# python_app_template

./: LICENSE  README.md  USAGE_GUIDE.md  environment.yml  pyproject.toml  setup_conda_environment.sh
my_package/: main.py
